--- a/latex/simulations.tex
+++ b/latex/simulations.tex
@@ -300,9 +300,40 @@ Comment on how the timing is not particularly good. \\
 \\
 Comment on how a tree can be deep, but split on the same variable multiple times?\\
 \\
-Maybe repeat some of experiments with added noise?
+Maybe repeat some of experiments with added noise?\\
+\\
+Find convention on capitalization. Logistic regression, logistic regression, Logistic Regression. \\
+Both in text and in section names.\\
+\\
+
 
 \section{Questions}
 \label{sec:Questions}
 Should the bias-variance tradeoff be descussed before CART (as now), or inside the CART section?\\
+\\
+Past or present tense in the introduction?\\
+\\
+Should I call it Simulations, or Numerical experiments, or somehting else? (Just experiments?)\\
+\\
+Should I have Preface, abstract (also in norwegian), Project overview?\\
+\\
+Shoud I include something about the practical use of classification, in the introduction?\\
+\\
+Should Linera classifiers be a seperate chapter? \\
+\\
+Should the derivations of "Why random forest work" be put in the appendex, and only the idea and results discussed in that section?\\
+\\
+Should i remove the equation number on equations note referred to?\\
+\\
+Preface and abstract.\\
+\\
+Where should notation be? \\
+\\
+Should I remove section about computation time in the introduction? \\
+\\
+Ordered classes in introduction.\\
+\\
+Should i mention for Logistic regression that by regularizing it it pretty powerfull? And that QDA and RDA exist aswell?\\
+\\
+How does linear classifier fit into this project?\\
 \\
