--- a/latex/simulations.tex
+++ b/latex/simulations.tex
@@ -337,3 +337,7 @@ Should i mention for Logistic regression that by regularizing it it pretty power
 \\
 How does linear classifier fit into this project?\\
 \\
+Do simulations on importance of training set size? \\
+\\
+Need book to do the Fisher's linear discriminant sectino\\
+\\
